--- a/apptemplates/simplenodeservice-content/backstagetemplates/catalog-info.yaml
+++ b/apptemplates/simplenodeservice-content/backstagetemplates/catalog-info.yaml
@@ -14,12 +14,12 @@ metadata:
     - url: https://github.com/agent319/enablement-openpipeline-segments-iam.git
       title: Github Repo
       icon: github
-    - url: https://zany-space-disco-7v7j54g6v9v9c745-80.GITHUB_CODESPACES_PORT_FORWARDING_DOMAIN_PLACEHOLDER/${{ values.projectName }}-${{ values.teamIdentifier }}-${{ values.releaseStage }}
+    - url: https://zany-space-disco-7v7j54g6v9v9c745-80.app.github.dev/${{ values.projectName }}-${{ values.teamIdentifier }}-${{ values.releaseStage }}
       title: "Browse Application"
       icon: subject
     - title: View in ArgoCD
       icon: catalog
-      url: https://zany-space-disco-7v7j54g6v9v9c745-30100.GITHUB_CODESPACES_PORT_FORWARDING_DOMAIN_PLACEHOLDER/applications/argocd/${{ values.projectName }}-${{ values.teamIdentifier }}-${{ values.releaseStage }}
+      url: https://zany-space-disco-7v7j54g6v9v9c745-30100.app.github.dev/applications/argocd/${{ values.projectName }}-${{ values.teamIdentifier }}-${{ values.releaseStage }}
     - title: View in Dynatrace
       icon: catalog
       url: https://ktn7285h.sprint.apps.dynatracelabs.com
