--- a/apptemplates/simplenodeservice-content/monaco/configure-dt/synthetic-monitor/monitors.yml
+++ b/apptemplates/simplenodeservice-content/monaco/configure-dt/synthetic-monitor/monitors.yml
@@ -3,7 +3,7 @@ configs:
   config:
     name: "Healthcheck ${{ values.projectName }}-${{ values.teamIdentifier }}-${{ values.releaseStage }}"
     parameters:
-      baseUrl: "https://zany-space-disco-7v7j54g6v9v9c745-80.GITHUB_CODESPACES_PORT_FORWARDING_DOMAIN_PLACEHOLDER/${{ values.projectName }}-${{ values.teamIdentifier }}-${{ values.releaseStage }}"
+      baseUrl: "https://zany-space-disco-7v7j54g6v9v9c745-80.app.github.dev/${{ values.projectName }}-${{ values.teamIdentifier }}-${{ values.releaseStage }}"
       frequencyMin: "1"
       enabled: "true"
       geoLocation: "GEOLOCATION-3F7C50D0C9065578"
